cargo-geiger/tests/snapshots/integration_tests__test3_package_with_nested_deps.stdout.snap
---
source: cargo-geiger/tests/integration_tests.rs
assertion_line: 51
expression: stdout
---

Metric output format: x/y
    x = unsafe code used by the build
    y = total unsafe code found in the crate

Symbols:
    :) = No `unsafe` usage found, declares #![forbid(unsafe_code)]
    ?  = No `unsafe` usage found, missing #![forbid(unsafe_code)]
    !  = `unsafe` usage found

Functions  Expressions  Impls  Traits  Methods  Dependency

0/0        1/1          0/0    0/0     0/0      !  test3_package_with_nested_deps 0.1.0
0/0        13/13        0/0    0/0     0/0      !  ├── itertools 0.12.1
0/0        0/0          0/0    0/0     0/0      ?  │   └── either 1.5.2
1/1        4/4          0/0    0/0     0/0      !  ├── test2_package_with_shallow_deps 0.1.0
1/1        2/2          0/0    0/0     0/0      !  │   ├── test1_package_with_no_deps 0.1.0
0/0        2/2          0/0    0/0     0/0      !  │   └── ref_slice 1.1.1
0/0        0/0          0/0    0/0     0/0      ?  └── doc-comment 0.3.1

2/2        22/22        0/0    0/0     0/0
